--- a/index.html
+++ b/index.html
@@ -11,34 +11,15 @@
   <body>
     <div class="container">
       <button class="modal-open">
-        <img src="img/suit-heart.svg" alt="" />
+        <img src="img/suit-heart.svg" alt="Heart" class="heartbtn" />
       </button>
+      <div class="cartCount"></div>
       <div class="backdrop">
         <div class="left">
           <div id="cancelbtn">
-            <button><img src="img/chevron-right.svg" alt="" /></button>
+            <button><img src="img/chevron-right.svg" alt="left" /></button>
           </div>
-          <div class="left-wrapper">
-            <!-- <li class="content-item">
-              <img src="img/pokemon'.png" alt="POKEMON" class="content-img" />
-              <img src="img/line.svg" alt="line" class="line" />
-              <div class="content-info-wrapper">
-                <div class="name-wrapper">
-                  <h3 class="pokemon-name">Pokemon</h3>
-                  <p class="pokemon-info">Grass, Poison</p>
-                </div>
-                <div>
-                  <button class="heart_btn">
-                    <img src="img/suit-heart.svg" alt="HEART" class="heart" />
-                  </button>
-                </div>
-              </div>
-              <div class="ages-wrapper">
-                <span class="kg">6.9 kg</span>
-                <span class="age">99 age</span>
-              </div>
-            </li> -->
-          </div>
+          <div class="left-wrapper"></div>
         </div>
       </div>
       <img src="img/pokemon_logo.svg" alt="LOGO IMG" class="logo-img" />
@@ -46,7 +27,7 @@
         <form action="#" id="fomrSearch">
           <select id="selectGross">
             <option selected>sort</option>
-            <option value="gross">gross</option>
+            <option value="grass">grass</option>
             <option value="fire">fire</option>
             <option value="bug">bug</option>
             <option value="water">water</option>
@@ -68,27 +49,7 @@
           <button class="searchBtn">Button</button>
         </form>
       </div>
-      <div class="content">
-        <!-- <li class="content-item">
-          <img src="img/pokemon'.png" alt="POKEMON" class="content-img" />
-          <img src="img/line.svg" alt="line" class="line" />
-          <div class="content-info-wrapper">
-            <div class="name-wrapper">
-              <h3 class="pokemon-name">Pokemon</h3>
-              <p class="pokemon-info">Grass, Poison</p>
-            </div>
-            <div>
-              <button class="heart_btn">
-                <img src="img/suit-heart.svg" alt="HEART" class="heart" />
-              </button>
-            </div>
-          </div>
-          <div class="ages-wrapper">
-            <span class="kg">6.9 kg</span>
-            <span class="age">99 age</span>
-          </div>
-        </li> -->
-      </div>
+      <div class="content"></div>
     </div>
     <script src="js/app.js"></script>
     <script src="js/main.js"></script>
