--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </select>
           <input type="text" placeholder="Search" id="SearchInput" />
           <select id="sort">
-            <option selected>sort</option>
+            <!-- <option selected>sort</option> -->
             <option value="sortA">A-Z name</option>
             <option value="sortZ">Z-A name</option>
           </select>
